updated styling to fix title and reduce whitespace

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -27,10 +27,18 @@ body {
   padding-top: 50px;
 }
 
-.padded {
+.extra-pad {
   padding-left: 25px;
   padding-right: 25px;
   padding-bottom: 25px;
+}
+
+.no-pad {
+  padding: 0px;
+}
+
+.no-margin {
+  margin: 0px;
 }
 
 .center {
@@ -68,7 +76,6 @@ a:active {
 /* Heading styles */
 h1 {
   font-family: 'Lato', futura, georgia;
-  line-height:5px;
   text-transform: Uppercase;
   color: #525252;
   text-align: center !important;
@@ -76,7 +83,6 @@ h1 {
 
 h3 {
   font-family: 'Lato', futura, georgia;
-  line-height:5px;
   text-transform: Uppercase;
   color: #525252;
 }
@@ -119,7 +125,7 @@ h3 {
   width: 100%;
   line-height: 1;
   color: rgba(0, 0, 0, 0.8);
-  content: "\25BC";
+  fent: "\25BC";
   position: absolute;
   text-align: center;
 }
